--- a/Pipfile
+++ b/Pipfile
@@ -4,12 +4,14 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-sqlalchemy = "1.4.43"
-alembic = "1.8.1"
+Faker = "14.2.0"
+Flask = "2.2.2"
+Flask-Migrate = "3.1.0"
+Flask-SQLAlchemy = "2.5.1"
+importlib-metadata = "6.0.0"
+importlib-resources = "5.10.0"
 ipdb = "0.13.9"
-pytest = "*"
-
-[dev-packages]
+pytest = "7.1.3"
 
 [requires]
 python_full_version = "3.8.13"
